Design completed for Dashboard.
Completed the entire design for the dashboard, grid was used
in combination with flexbox, responsive design on cards with
minmax. And updated README file.

--- a/index.html
+++ b/index.html
@@ -8,20 +8,170 @@
 </head>
 <body>
     <div class="container">
+
         <div class="header">
+                <div class="top-header">
+                    <div class="top-left">
+                        <img src="./images/magnify.svg" width="30px" height="30px">
+                        <input type="search" class="search-input">
+                    </div>
+                    <div class="top-right">
+                        <img src="./images/notify.svg" width="30px" height="30px">
+                        <img class="cat-avatar" src="./images/cat.png" width="50px" height="50px">
+                        <span>Luis Muñoz</span>
+                    </div>
+                </div>
+                <div class="bottom-header">
+                    <div class="bottom-left">
+                        <img class="cat-avatar" src="./images/cat.png" width="80px" height="80px">
+                        <div class="bottom-name">
+                            <span>Hi there,</span>
+                            <span>Luis Muñoz (@lmunoz)</span>
+                        </div>
+                    </div>
+                    <div class="bottom-right">
+                        <div class="button-group">
+                            <button>New</button>
+                            <button>Upload</button>
+                            <button>Share</button>
+                        </div>
+                    </div>
+                </div>
         </div>
+
         <div class="sidebar">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="side-container">
+                <div class="side-icons">
+                    <img src="./images/dashboard.svg" width="50px" height="50px">
+                    <img src="./images/home.svg" width="30px" height="30px">
+                    <img src="./images/card.svg" width="30px" height="30px">
+                    <img src="./images/message.svg" width="30px" height="30px">
+                    <img src="./images/clock.svg" width="30px" height="30px">
+                    <img src="./images/note.svg" width="30px" height="30px">
+                    <img src="./images/group.svg" width="30px" height="30px">
+                    <img src="./images/cog.svg" width="30px" height="30px">
+                    <img src="./images/help.svg" width="30px" height="30px">
+                    <img src="./images/shield.svg" width="30px" height="30px">
+                </div>
+                <div class="side-text">
+                    <span class="txt-big">Dashboard</span>
+                    <span class="txt-small">Home</span>
+                    <span class="txt-small">Profile</span>
+                    <span class="txt-small">Messages</span>
+                    <span class="txt-small">History</span>
+                    <span class="txt-small">Tasks</span>
+                    <span class="txt-small">Communities</span>
+                    <span class="txt-small">Settings</span>
+                    <span class="txt-small">Support</span>
+                    <span class="txt-small">Privacy</span>
+                </div>
+            </div>
         </div>
-        <div class="main-content"></div>
+
+        <div class="main-content">
+            <div class="left-heading">
+                <h2>Your Projects</h2>
+            </div>
+            <div class="right-heading">
+                <h2>Announcements</h2>
+            </div>
+            <div class="cards-container">
+                    <div class="card">
+                        <h3>Super Cool Project</h3>
+                        <p class="card-text">
+                            Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <h3>Less Cool Project</h3>
+                        <p class="card-text">
+                            Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt consectetur sapien et, facilisis dolor. 
+                            Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <h3>Impossible App</h3>
+                        <p class="card-text">
+                            In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <h3>Easy Peasy App</h3>
+                        <p class="card-text">
+                            Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. 
+                            Curabitur dignissim nisi int tortor commodo, ac bibendum magna tincidunt.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <h3>Ad Blocker</h3>
+                        <p class="card-text">
+                            Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <h3>Money Maker</h3>
+                        <p class="card-text">
+                            Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. 
+                            Pellentesque mollis nec sem vel aliquam.
+                        </p>
+                    </div>
+            </div>
+            <div class="main-right">
+                <div class="announce">
+                    <div class="announce-content">
+                        <h4>Site Maintanence</h4>
+                        <p>
+                            Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue...
+                        </p>
+                    </div>
+                    <div class="announce-content">
+                        <h4>Community Share Day</h4>
+                        <p>
+                            Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...
+                        </p>
+                    </div>
+                    <div class="announce-content">
+                        <h4>Updated Privacy Policy</h4>
+                        <p>
+                            Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...
+                        </p>
+                    </div>
+                </div>
+                <div class="trending-heading">
+                    <h2>Trending</h2>
+                </div>
+                <div class="trending">
+                    <div class="trending-content">
+                        <img src="./images/dog.png" width="45px" height="40px">
+                        <div class="trending-txt">
+                            <span>@tegan</span>
+                            <span>World Peace Builder</span>
+                        </div>
+                    </div>
+                    <div class="trending-content">
+                        <img src="./images/cat.png" width="45px" height="40px">
+                        <div class="trending-txt">
+                            <span>@lmunoz</span>
+                            <span>Luis Muñoz</span>
+                        </div>
+                    </div>
+                    <div class="trending-content">
+                        <img src="./images/cat2.png" width="45px" height="40px">
+                        <div class="trending-txt">
+                            <span>@coolcat</span>
+                            <span>Cool Cat</span>
+                        </div>
+                    </div>
+                    <div class="trending-content">
+                        <img src="./images/penguin.jpg" width="45px" height="40px">
+                        <div class="trending-txt">
+                            <span>@alex</span>
+                            <span>No traffic maker</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
