added card icons

--- a/index.html
+++ b/index.html
@@ -77,43 +77,85 @@
             </div>
             <div class="cards-container">
                     <div class="card">
-                        <h3>Super Cool Project</h3>
-                        <p class="card-text">
+                        <div class="top-card">
+                            <h3>Super Cool Project</h3>
+                            <p class="card-text">
                             Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.
-                        </p>
+                            </p>
+                        </div>
+                        <div class="bottom-card">
+                            <img src="./images/star.svg" width="30px" height="30px">
+                            <img src="./images/eye.svg" width="30px" height="30px">
+                            <img src="./images/fork.svg" width="30px" height="30px">
+                        </div>
                     </div>
                     <div class="card">
-                        <h3>Less Cool Project</h3>
-                        <p class="card-text">
-                            Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt consectetur sapien et, facilisis dolor. 
-                            Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.
-                        </p>
+                        <div class="top-card">
+                            <h3>Less Cool Project</h3>
+                            <p class="card-text">
+                                Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt consectetur sapien et, facilisis dolor. 
+                                Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.
+                            </p>
+                        </div>
+                        <div class="bottom-card">
+                            <img src="./images/star.svg" width="30px" height="30px">
+                            <img src="./images/eye.svg" width="30px" height="30px">
+                            <img src="./images/fork.svg" width="30px" height="30px">
+                        </div>
                     </div>
                     <div class="card">
-                        <h3>Impossible App</h3>
-                        <p class="card-text">
-                            In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.
-                        </p>
+                        <div class="top-card">
+                            <h3>Impossible App</h3>
+                            <p class="card-text">
+                                In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.
+                            </p>
+                        </div>
+                        <div class="bottom-card">
+                            <img src="./images/star.svg" width="30px" height="30px">
+                            <img src="./images/eye.svg" width="30px" height="30px">
+                            <img src="./images/fork.svg" width="30px" height="30px">
+                        </div>
                     </div>
                     <div class="card">
-                        <h3>Easy Peasy App</h3>
-                        <p class="card-text">
-                            Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. 
-                            Curabitur dignissim nisi int tortor commodo, ac bibendum magna tincidunt.
-                        </p>
+                        <div class="top-card">
+                            <h3>Easy Peasy App</h3>
+                            <p class="card-text">
+                                Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. 
+                                Curabitur dignissim nisi int tortor commodo, ac bibendum magna tincidunt.
+                            </p>
+                        </div>
+                        <div class="bottom-card">
+                            <img src="./images/star.svg" width="30px" height="30px">
+                            <img src="./images/eye.svg" width="30px" height="30px">
+                            <img src="./images/fork.svg" width="30px" height="30px">
+                        </div>
                     </div>
                     <div class="card">
-                        <h3>Ad Blocker</h3>
-                        <p class="card-text">
-                            Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.
-                        </p>
+                        <div class="top-card">
+                            <h3>Ad Blocker</h3>
+                            <p class="card-text">
+                                Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.
+                            </p>
+                        </div>
+                        <div class="bottom-card">
+                            <img src="./images/star.svg" width="30px" height="30px">
+                            <img src="./images/eye.svg" width="30px" height="30px">
+                            <img src="./images/fork.svg" width="30px" height="30px">
+                        </div>
                     </div>
                     <div class="card">
-                        <h3>Money Maker</h3>
-                        <p class="card-text">
-                            Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. 
-                            Pellentesque mollis nec sem vel aliquam.
-                        </p>
+                        <div class="top-card">
+                            <h3>Money Maker</h3>
+                            <p class="card-text">
+                                Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. 
+                                Pellentesque mollis nec sem vel aliquam.
+                            </p>
+                        </div>
+                        <div class="bottom-card">
+                            <img src="./images/star.svg" width="30px" height="30px">
+                            <img src="./images/eye.svg" width="30px" height="30px">
+                            <img src="./images/fork.svg" width="30px" height="30px">
+                        </div>
                     </div>
             </div>
             <div class="main-right">
